Second commit: looks a little nicer but still very basic

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Weather API</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id= "weather" data-weather>
+    <div id= "weather" data-weather class="center">
         <ul>
-            <li id="place">Location: </li>
-            <li id="temperature">Temperature in Celsius: </li>
-            <li id="wind">Wind Speed: </li>
-            <li id="sunrise">Sunrise: </li>
-            <li id="sunset">Sunset: </li>
+            <li id="place"><b>Showing weather for:</b> </li>
+            <li id="temperature"><b>Temperature in Celsius:</b> </li>
+            <li id="wind"><b>Wind Speed:</b> </li>
+            <li id="sunrise"><b>Sunrise:</b> </li>
+            <li id="sunset"><b>Sunset:</b> </li>
         </ul>
         
     </div>
